# voice-chatbot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
src/: __init__.py  config.py  main.py
src/processors/: aed_formatter.py  content_concat.py  image_collector.py
src/serializers/: __init__.py  multimodal.py
src/services/: sensevoice_stt.py  stateful_llm.py  vllm_tts.py
src/transports/: __init__.py  firefly.py
src/utils/: audio.py  logging.py
src/vad/: __init__.py  adaptive_noise.py  aed_suppressor.py  fsmn_gate.py  smart_interruption.py
tests/: test_content_concat.py  test_firefly_transport.py  test_sensevoice_stt.py  test_stateful_llm.py  test_vllm_tts.py  test_ws_client.py
